--- a/Proyectos/DW Contorno Servidor/Login/Vista/login.html
+++ b/Proyectos/DW Contorno Servidor/Login/Vista/login.html
@@ -1,21 +1,42 @@
+<?php
+
+$cookie_name = "user";
+$cookie_name = "contador";
+$cookie_value = 0;
+if(isset($_COOKIE['user']))
+{ 
+	setcookie($cookie_name, $cookie_value, time() + (60), "/");
+	$mensaje = 'Intentos: ' . $_COOKIE['contador']; 
+} 
+else 
+{ 
+	setcookie('contador', ++$cookie_value, time() + 60); 
+} 
+?>
+
+
 <!DOCTYPE html>
-<html>
+<html lang="es">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Login</title>
 </head>
+
 <body>
 
 	<form action="autenticar.php" method="post">
-	
-		<label for="username">Username:</label><br> 
-		<input type="text" id="username" name="username" required="required"><br> 
-		
-		<label for="pwd">Password:</label><br>	
+
+		<label for="username">Username:</label><br>
+		<input type="text" id="username" name="username" required="required"><br>
+
+		<label for="pwd">Password:</label><br>
 		<input type="password" id="pwd" name="pwd" required="required"><br>
-		
+
 		<br> <input type="submit" value="Submit">
 	</form>
 
 </body>
+
 </html>
